--- a/_sass/components/_alert.scss
+++ b/_sass/components/_alert.scss
@@ -310,6 +310,7 @@
     .nds-alert-title,
     .nds-alert-description {
       display: inline;
+      white-space: normal;
     }
 
     .nds-alert-title {
