--- a/_sass/components/_filter.scss
+++ b/_sass/components/_filter.scss
@@ -96,7 +96,7 @@
 
 .nds-search-box {
     display: flex;
-    gap: var(--spacing-4xl);
+    gap: var(--spacing-2xl)!important;
     margin: 0 auto;
     justify-content: center;
     align-items: flex-start;
