--- a/_sass/layout/_block.scss
+++ b/_sass/layout/_block.scss
@@ -5,6 +5,7 @@
 .nds-block {
     container-type: inline-size;
     container-name: block;
+    width: 100%;
 
     margin-block-end: 2rem;
 
