--- a/_sass/layout/_section-layout.scss
+++ b/_sass/layout/_section-layout.scss
@@ -160,6 +160,7 @@
 .nds-section-wrapper {
     container-type: inline-size;
     container-name: section;
+    width: 100%;
 
     display: flex;
     flex-wrap: wrap;
